# orallexa-marketing-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  agent_card.json  docker-compose.yml  marketing-agent.yml  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  mcp-install-check.yml  publish-pypi.yml  publish.yml  release-announce.yml  scheduled.yml  test.yml
docs/: architecture.md  launch_plan_vibexforge_20260429.md
docs/future/: saas-design.md
docs/launch-content/: dev-to.md  show-hn.md
docs/mcp-listing/: README.md  demo-script.md
docs/vibex-launch/: NOTES.md  launch_plan_vibexforge_20260429.md
docs/vibex-launch/drafts/pending/: 20260429T141911Z-vibexforge-bluesky.md  20260429T141911Z-vibexforge-dev_to.md  20260429T141911Z-vibexforge-linkedin.md  20260429T141911Z-vibexforge-mastodon.md  20260429T141911Z-vibexforge-x.md
docs/vibex-launch/polished/: bluesky-ph-day.md  jike-ph-day.md  linkedin-ph-day.md  mastodon-ph-day.md  x-ph-1-reminder.md  x-ph-2-teaser.md  x-thread-ph-day.md
examples/: generic_demo.py  orallexa_demo.py
marketing_agent/: __init__.py  __main__.py  autopsy.py  bandit.py  best_time.py  budget.py  cli.py  cost.py  critic.py  dspy_signatures.py  engagement.py  ensemble_critic.py  logging.py  mcp_server.py  memory.py  multiproject.py  observability.py  orchestrator.py  preference.py  queue.py  reflexion_memory.py  reply_suggester.py  retry.py  schedule.py  semantic_dedup.py  skill_promoter.py  strategy.py  supervisor.py  threads.py  trend_memory.py  trends.py  trends_to_drafts.py  types.py  vibex_trends.py  web_ui.py
marketing_agent/content/: __init__.py  generator.py  images.py  templates.py
marketing_agent/integrations/: __init__.py  vibexforge.py
marketing_agent/listeners/: __init__.py  bluesky_firehose.py
marketing_agent/llm/: __init__.py  anthropic_compat.py  edge_provider.py
queue/approved/: 20260429T000021Z-orallexa-x.md  20260430T154840Z-orallexa-marketing-agent-x.md  20260501T214309Z-orallexa-x.md  20260502T145303Z-orallexa-x.md  20260502T145311Z-vibexforge-x.md
queue/pending/: 20260430T154840Z-orallexa-marketing-agent-x.md  20260501T150015Z-orallexa-marketing-agent-x.md  20260501T150020Z-orallexa-x.md  20260501T150025Z-orallexa-x.md  20260501T200548Z-orallexa-marketing-agent-x.md  20260501T200619Z-vibexforge-x.md  20260501T200622Z-orallexa-marketing-agent-x.md  20260501T200631Z-orallexa-marketing-agent-x.md  20260501T213817Z-orallexa-marketing-agent-x.md  20260501T213823Z-orallexa-x.md  20260501T213831Z-orallexa-x.md  20260501T213844Z-vibexforge-x.md  20260501T213848Z-orallexa-marketing-agent-x.md  20260501T214304Z-orallexa-marketing-agent-x.md  20260501T214330Z-vibexforge-x.md  20260501T214342Z-orallexa-marketing-agent-x.md  20260502T145252Z-orallexa-marketing-agent-x.md  20260502T145259Z-orallexa-x.md  20260502T145307Z-orallexa-x.md  20260502T145315Z-vibexforge-x.md  20260502T145319Z-vibexforge-x.md  20260502T145325Z-orallexa-marketing-agent-x.md  20260502T145330Z-orallexa-marketing-agent-x.md  20260502T145334Z-orallexa-marketing-agent-x.md  20260503T145234Z-orallexa-marketing-agent-x.md  20260503T145240Z-orallexa-x.md  20260503T145246Z-orallexa-x.md  20260503T145249Z-orallexa-x.md  20260503T145254Z-vibexforge-x.md  20260503T145257Z-vibexforge-x.md  20260503T145302Z-vibexforge-x.md  20260503T145308Z-orallexa-marketing-agent-x.md  20260503T145315Z-orallexa-marketing-agent-x.md  20260503T145318Z-orallexa-marketing-agent-x.md  20260504T160352Z-orallexa-marketing-agent-x.md  20260504T160358Z-orallexa-x.md  20260504T160401Z-orallexa-x.md  20260504T160413Z-vibexforge-x.md  20260504T160419Z-vibexforge-x.md  20260504T160424Z-vibexforge-x.md  (+3 more)
queue/posted/: 20260429T000021Z-orallexa-x.md  20260430T154840Z-orallexa-marketing-agent-x.md  20260501T214309Z-orallexa-x.md  20260502T145303Z-orallexa-x.md  20260502T145311Z-vibexforge-x.md
queue/rejected/: 20260429T141123Z-orallexa-marketing-agent-x.md  20260429T155743Z-orallexa-marketing-agent-x.md  20260501T150012Z-vibexforge-x.md  20260501T150022Z-orallexa-x.md  20260501T150028Z-vibexforge-x.md  20260501T150031Z-vibexforge-x.md  20260501T150033Z-vibexforge-x.md  20260501T150036Z-orallexa-marketing-agent-x.md  20260501T150038Z-orallexa-marketing-agent-x.md  20260501T150041Z-orallexa-marketing-agent-x.md  20260501T200544Z-vibexforge-x.md  20260501T200555Z-orallexa-x.md  20260501T200559Z-orallexa-x.md  20260501T200603Z-orallexa-x.md  20260501T200609Z-vibexforge-x.md  20260501T200614Z-vibexforge-x.md  20260501T213813Z-vibexforge-x.md  20260501T213827Z-orallexa-x.md  20260501T213835Z-vibexforge-x.md  20260501T213840Z-vibexforge-x.md  20260501T213852Z-orallexa-marketing-agent-x.md  20260501T213856Z-orallexa-marketing-agent-x.md  20260501T214301Z-vibexforge-x.md  20260501T214313Z-orallexa-x.md  20260501T214317Z-orallexa-x.md  20260501T214321Z-vibexforge-x.md  20260501T214325Z-vibexforge-x.md  20260501T214333Z-orallexa-marketing-agent-x.md  20260501T214337Z-orallexa-marketing-agent-x.md
scripts/: daily_post.py  reject_today_cron.sh  run_daily_engagement.sh  run_ph_day_reminder.sh  run_trend_perf_report.sh  trend_perf_report.py
skills/marketing-voice/: SKILL.md
tests/: conftest.py  test_anthropic_compat.py  test_autopsy.py  test_bandit.py  test_best_time.py  test_bluesky_firehose.py  test_budget.py  test_chinese_platforms.py  test_cli.py  test_cost.py  test_critic.py  test_daily_post_trends.py  test_dspy_signatures.py  test_edge_provider.py  test_engagement.py  test_ensemble_critic.py  test_generator_variants.py  test_image_upload.py  test_images.py  test_integrations.py  test_logging.py  test_mcp_server.py  test_memory.py  test_multiproject.py  test_observability.py  test_preference.py  test_queue.py  test_reflexion_memory.py  test_reply_suggester.py  test_retry.py  test_schedule.py  test_semantic_dedup.py  test_skill_promoter.py  test_smoke.py  test_strategy.py  test_supervisor.py  test_threads.py  test_threads_adapter.py  test_trend_memory.py  test_trends.py  (+4 more)
