[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orallexa-marketing-agent"
version = "0.4.0"
description = "AI marketing agent for OSS founders — auto-generate and distribute project content across X, Reddit, LinkedIn, and more."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Xiaoyu (Alex) Ji", email = "xji1@mail.yu.edu"}]
keywords = ["marketing", "automation", "ai-agent", "twitter", "reddit", "linkedin", "oss", "build-in-public"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.9,<3",
    "tweepy>=4.14",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "praw>=7.7",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=5.0"]
mcp = ["fastmcp>=2.0"]

[project.scripts]
marketing-agent = "marketing_agent.cli:main"
marketing-agent-mcp = "marketing_agent.mcp_server:main"

[project.urls]
Homepage = "https://github.com/alex-jb/orallexa-marketing-agent"
Repository = "https://github.com/alex-jb/orallexa-marketing-agent"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
